--- a/FileUpload/FileUpload.csproj
+++ b/FileUpload/FileUpload.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\js\azure-storage\" />
+    <Folder Include="wwwroot\lib\site\" />
   </ItemGroup>
 
 </Project>
