--- a/FileUpload/FileUpload.csproj
+++ b/FileUpload/FileUpload.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="node_modules\" />
     <Folder Include="wwwroot\lib\site\" />
   </ItemGroup>
 
