--- a/FileUpload/package.json
+++ b/FileUpload/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "azure-storage": "^2.8.1",
     "bootstrap": "^4.0.0",
+    "bootstrap-waitingfor": "^1.2.7",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-uglify": "^3.0.0",
@@ -19,6 +20,7 @@
     "jquery-validation-unobtrusive": "^3.2.8",
     "merge-stream": "^1.0.1",
     "popper.js": "^1.14.0",
+    "requirejs": "^2.3.5",
     "rimraf": "^2.6.2"
   }
 }
